Fix section height

--- a/template.html
+++ b/template.html
@@ -166,7 +166,7 @@
 </section>
 
 
-<section id="contact" class="section-black">
+<section id="contact" class="section-black section-last">
   <div class="section-trigger section-trigger-top"></div>
   <div class="section-inner">
     <h2>Kontakt</h2>
