--- a/template.html
+++ b/template.html
@@ -116,7 +116,7 @@
   <div class="section-inner">
     <h2 data-content="Oblečení"></h2>
     <p data-content="Svatba se bude konat venku. Oblečte se pěkně, pohodlně a podle počasí. Očekáváme krásný letní den, tak si, pánové, vezměte nějakou
-      sváteční košili*, a&nbsp;dámy - vy si obvykle dokážete dobře poradit. Cokoli v&nbsp;barvách louky nebude šlápnutí vedle."></p>
+      sváteční košili*, a&nbsp;dámy - vy si obvykle dokážete dobře poradit. Cokoli v&nbsp;barvách rozkvetlé louky nebude šlápnutí vedle."></p>
   </div>
   <p class="text-small" data-content="*ale žádné džíny."></p>
   <div class="section-trigger section-trigger-bottom"></div>
