--- a/template.html
+++ b/template.html
@@ -41,7 +41,7 @@
   <div class="section-inner">  
     <h2 data-content="Kdy a kde?"></h2>
     <p>
-      <span data-content="v sobotu 5. června od 14:00"><span><br>
+      <span data-content="v sobotu 5. června od 14:00"></span><br>
       <span data-content="Bělá 14, okres Semily"></span>
     </p>
   </div>
