--- a/template.html
+++ b/template.html
@@ -105,7 +105,7 @@
   <span class="link-back text-center text-small"><a href="#links" data-content="Zpátky na rozcestník"></a></span>
   <div class="section-inner">
     <h2 data-content="Místo, parkování & doprava"></h2>
-    <a href="https://mapy.cz/s/bajegogena" data-content="Místo pro parkování naleznete zde."></p>
+    <a href="https://mapy.cz/s/bajegogena" data-content="Místo pro parkování naleznete zde."></a>
   </div>
   <div class="section-trigger section-trigger-bottom"></div>
 </section>
